# multilayer-perceptron

./: README.md
compile/: CMakeLists.txt  compile.cmd
include/: back_propagation.h  classificador.h  configuracoes.h  contar_csv.h  escrever_csv.h  forward_propagation.h  ler_csv.h  parametros_io.h  treinador.h
src/: back_propagation.c  classificador.c  contar_csv.c  escrever_csv.c  forward_propagation.c  ler_csv.c  main.c  parametros_io.c  treinador.c
